Fix overflow issue on blog posts page for wide and full aligned blocks.

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -931,7 +931,8 @@
 	}
 }
 
-.single.has-sidebar {
+.single.has-sidebar,
+.blog.has-sidebar {
 	.entry .entry-content > *,
 	.entry .entry-summary > * {
 		&.alignwide {
