--- a/styles/style-1-rtl.css
+++ b/styles/style-1-rtl.css
@@ -3948,14 +3948,18 @@ nav.tertiary-menu a:hover {
 
 @media only screen and (min-width: 768px) {
   .single.has-sidebar .entry .entry-content > *.alignwide,
-  .single.has-sidebar .entry .entry-summary > *.alignwide {
+  .single.has-sidebar .entry .entry-summary > *.alignwide,
+  .blog.has-sidebar .entry .entry-content > *.alignwide,
+  .blog.has-sidebar .entry .entry-summary > *.alignwide {
     margin-left: 0;
     max-width: 100%;
   }
 }
 
 .single.has-sidebar .entry .entry-content > *.alignfull,
-.single.has-sidebar .entry .entry-summary > *.alignfull {
+.single.has-sidebar .entry .entry-summary > *.alignfull,
+.blog.has-sidebar .entry .entry-content > *.alignfull,
+.blog.has-sidebar .entry .entry-summary > *.alignfull {
   margin-right: 0;
   margin-left: 0;
   max-width: 100%;
@@ -3964,7 +3968,9 @@ nav.tertiary-menu a:hover {
 
 @media only screen and (min-width: 768px) {
   .single.has-sidebar .entry .entry-content > *.alignfull,
-  .single.has-sidebar .entry .entry-summary > *.alignfull {
+  .single.has-sidebar .entry .entry-summary > *.alignfull,
+  .blog.has-sidebar .entry .entry-content > *.alignfull,
+  .blog.has-sidebar .entry .entry-summary > *.alignfull {
     margin-right: 0;
   }
 }
